--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <link rel='stylesheet' href='/css/bootstrap.min.css' >
+    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' >
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
@@ -15,9 +15,8 @@
   </body>
   <footer>
 
-    <script src="/js/dayjs.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
+
 
   </footer>
 </html>
