--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
     <title><%= title %></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <link rel='stylesheet' href='/css/bootstrap.min.css' >
+    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' >
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
 
@@ -17,7 +17,7 @@
   </body>
   <footer>
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/index.js"></script>
   </footer>
 </html>
