--- a/src/views/time.ejs
+++ b/src/views/time.ejs
@@ -4,14 +4,14 @@
     <title>Server Time SSE</title>
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <link rel='stylesheet' href='/css/bootstrap.min.css' >
+    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' >
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
     <h1>Server Time SSE Example</h1>
     <p>Open the console to see server and local times sent to all clients.</p>
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/time.js" type="module"></script>
 </body>
 </html>
